Showing cart is fixed

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -5,7 +5,7 @@
       </ion-nav-back-button> -->
             <ion-nav-buttons side="right">
                 <ion-spinner ng-show="showLoader"></ion-spinner>
-                <a class="button button-icon icon ion-ios-cart-outline"></a>
+                <a class="button button-icon icon ion-ios-cart-outline" ng-click="vm.showCart()"></a>
                 <a class="button button-icon icon ion-search" ng-click="vm.showSearch()"></a>
             </ion-nav-buttons>
 
