--- a/www/css/style.css
+++ b/www/css/style.css
@@ -149,4 +149,22 @@ ion-spinner * {
 .product-list .name {
     max-height: 2.3em;
     min-height: 2em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /*white-space: nowrap;*/
+}
+
+.notify-bubble {
+    position: absolute;
+    width: 1em;
+    height: 1em;
+    top: 0px;
+    right: -2px;
+    padding: 2px 5px 2px 6px;
+    background-color: red;
+    color: white;
+    font-size: 0.65em;
+    border-radius: 50%;
+    box-shadow: 1px 1px 1px grey;
+    display: none;
 }
