--- a/www/templates/productLists.html
+++ b/www/templates/productLists.html
@@ -8,7 +8,7 @@
                         <a href="#/app/productDetails/{{itm[0].id}}">
                             <img class="product-list-item-img" src="{{vm.imageUrl + itm[0].imageUrl[0]}}" height="40px" />
                         </a>
-                        <h4 class="name">{{itm[0].name}}</h4>
+                        <p class="name">{{itm[0].name}}</p>
                         <img height="40px" ng-show="itm[0].showOffer" style="float:right;position:top;" src="img/special-offer.jpg">
                         <!--<p style="margin-right: 25%;">{{itm[0].description}}</p>-->
                         <div class="row">
@@ -30,7 +30,7 @@
                         <a href="#/app/productDetails/{{itm[1].id}}">
                             <img class="product-list-item-img" src="{{vm.imageUrl + itm[1].imageUrl[0]}}" height="40px" />
                         </a>
-                        <h4 class="name">{{itm[1].name}}</h4>
+                        <p class="name">{{itm[1].name}}</p>
                         <img height="40px" ng-show="itm[1].showOffer" style="float:right;position:top;" src="img/special-offer.jpg">
                         <!--<p style="margin-right: 25%;">{{itm[1].description}}</p>-->
                         <div class="row">
