--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,22 +1,34 @@
 <ion-view view-title="Search">
-  <ion-content>
-    <div class="bar bar-header item-input-inset">
-  <label class="item-input-wrapper">
+    <ion-content>
+        <div class="bar bar-header item-input-inset">
+            <label class="item-input-wrapper">
     <i class="icon ion-ios-search placeholder-icon"></i>
     <input type="search" placeholder="Search" ng-change="vm.search()" ng-model="vm.searchText"
     ng-model-options='{ debounce: 1000 }'>
   </label>
-</div>
+        </div>
 
-<!-- product list start from here -->
-<div class="list">
+        <!-- product list start from here -->
+        <div class="list" ng-if="vm.products">
 
-    <a class="item item-avatar" ng-repeat="itm in vm.products track by $index" href="#/app/productDetails/{{itm.id}}">
-    <img cache-src="{{vm.imageUrl + itm.imageUrl[0]}}"/>
-      <h2>{{itm.name}}</h2>
-      <p>{{itm.description}}</p>
-    </a>
-</div>
+            <a class="item item-avatar" ng-repeat="itm in vm.products track by $index" href="#/app/productDetails/{{itm.id}}">
+                <img cache-src="{{vm.imageUrl + itm.imageUrl[0]}}" />
+                <h2>{{itm.name}}</h2>
+                <p>{{itm.description}}</p>
+            </a>
+        </div>
 
-  </ion-content>
+        <div class="card" ng-show="vm.products === undefined">
+            <div class="item item-divider">
+                Start typing to Search.
+            </div>
+            <div class="item item-text-wrap">
+                <img src="img/typing.png" width="100%" />
+                <!--<i class="icon ion-ios-search" style="font-size:larger;"></i>
+                <div class=" button button-icon icon ion-ios-search ">-->
+            </div>
+        </div>
+        </div>
+
+    </ion-content>
 </ion-view>
