--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -34,7 +34,7 @@
                         <button class="button button-icon icon ion-ios-information" ng-click="vm.showProduct(itm.id)"></button>
                     </div>
                     <div class="col">
-                        <button class="button button-icon icon ion-ios-trash-outline" ng-click="vm.removeProduct(itm.orderId,itm.id)"></button>
+                        <button class="button button-icon icon ion-ios-trash-outline" ng-click="vm.showRemoveConfirm(itm.orderId,itm.id)"></button>
                     </div>
                 </div>
             </a>
