--- a/www/templates/shippingInfo.html
+++ b/www/templates/shippingInfo.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Place Order">
+<ion-view view-title="Place Order" ng-init="vm.init()">
     <ion-content>
         <div class="list">
 
