--- a/www/templates/orderDetail.html
+++ b/www/templates/orderDetail.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Order Detials" ng-init="vm.init()">
+<ion-view view-title="Order Details" ng-init="vm.init()">
     <ion-content>
         <div class="list card">
             <a href="#" class="item item-icon-left">
